<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>nturt_ros</name>
    <version>0.0.0</version>
    <description>ROS2 metapackage for NTU racing team.</description>
    <maintainer email="jet22854111@gmail.com">QuantumSpawner</maintainer>
    <author email="jet22854111@gmail.com">QuantumSpawner</author>
    <license>TODO</license>

    <!-- buile dependencies -->
    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- execute dependencies -->
    <exec_depend>nturt_bag_recorder</exec_depend>
    <exec_depend>nturt_can_config</exec_depend>
    <exec_depend>nturt_can_parser</exec_depend>
    <exec_depend>nturt_led_controller</exec_depend>
    <exec_depend>nturt_push_to_control_tower</exec_depend>
    <exec_depend>nturt_realtime_utils</exec_depend>
    <exec_depend>nturt_ros_interface</exec_depend>
    <exec_depend>nturt_rpi_deployer</exec_depend>
    <exec_depend>nturt_screen_controller</exec_depend>
    <exec_depend>ros2_socketcan</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
